--- a/self_driving_car_game.ipynb
+++ b/self_driving_car_game.ipynb
@@ -1,31 +1,311 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6fc4cd31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: bettercam in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (1.0.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from bettercam) (2.2.6)\n",
+      "Requirement already satisfied: comtypes in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from bettercam) (1.4.12)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: dxcam in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (0.0.5)\n",
+      "Requirement already satisfied: numpy in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from dxcam) (2.2.6)\n",
+      "Requirement already satisfied: opencv-python in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from dxcam) (4.12.0.88)\n",
+      "Requirement already satisfied: comtypes in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from dxcam) (1.4.12)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: pyvjoystick in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (1.1.2.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: torch in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (2.8.0)\n",
+      "Requirement already satisfied: torchvision in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (0.23.0)\n",
+      "Requirement already satisfied: opencv-python in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (4.12.0.88)\n",
+      "Requirement already satisfied: numpy in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (2.2.6)\n",
+      "Requirement already satisfied: pandas in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (2.3.2)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (3.10.6)\n",
+      "Requirement already satisfied: albumentations in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (2.0.8)\n",
+      "Requirement already satisfied: filelock in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (3.19.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (4.15.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (1.14.0)\n",
+      "Requirement already satisfied: networkx in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (3.5)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (3.1.6)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (2025.9.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torch) (80.9.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from torchvision) (11.3.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from matplotlib) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from matplotlib) (4.60.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from matplotlib) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from matplotlib) (3.2.5)\n",
+      "Requirement already satisfied: scipy>=1.10.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albumentations) (1.16.2)\n",
+      "Requirement already satisfied: PyYAML in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albumentations) (6.0.3)\n",
+      "Requirement already satisfied: pydantic>=2.9.2 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albumentations) (2.11.9)\n",
+      "Requirement already satisfied: albucore==0.0.24 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albumentations) (0.0.24)\n",
+      "Requirement already satisfied: opencv-python-headless>=4.9.0.80 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albumentations) (4.12.0.88)\n",
+      "Requirement already satisfied: stringzilla>=3.10.4 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albucore==0.0.24->albumentations) (4.0.14)\n",
+      "Requirement already satisfied: simsimd>=5.9.2 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from albucore==0.0.24->albumentations) (6.5.3)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from pydantic>=2.9.2->albumentations) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from pydantic>=2.9.2->albumentations) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from pydantic>=2.9.2->albumentations) (0.4.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (from jinja2->torch) (3.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Invalid requirement: '#': Expected package name at the start of dependency specifier\n",
+      "    #\n",
+      "    ^\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: keyboard in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (0.13.5)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: pyaccsharedmemory in c:\\users\\abdul\\desktop\\ml\\projects\\selfdriving\\.venv\\lib\\site-packages (1.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting mss\n",
+      "  Downloading mss-10.1.0-py3-none-any.whl.metadata (6.7 kB)\n",
+      "Downloading mss-10.1.0-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: mss\n",
+      "Successfully installed mss-10.1.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install bettercam\n",
+    "%pip install dxcam \n",
+    "%pip install pyvjoystick\n",
+    "%pip install torch torchvision opencv-python numpy pandas matplotlib albumentations\n",
+    "%pip install ultralytics  # (for YOLO)\n",
+    "%pip install keyboard\n",
+    "%pip install pyaccsharedmemory\n",
+    "%pip install mss"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "efee1bd9",
+   "id": "7f724d0f",
    "metadata": {},
    "source": [
-    "# install dep\n"
+    "screen capture "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45214724",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "id": "5630b44f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Screenshot capture ready. Press 'c' to capture, 'q' to quit.\n",
+      "Make sure Assetto Corsa is running and in a session!\n",
+      "DXCam and AC telemetry initialized successfully\n",
+      "✓ Connected to AC telemetry. Current speed: 58.9 km/h\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _compointer_base.__del__ at 0x00000140DED72FC0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\abdul\\Desktop\\ML\\projects\\SelfDriving\\.venv\\Lib\\site-packages\\comtypes\\_post_coinit\\unknwn.py\", line 284, in __del__\n",
+      "    self.Release()  # type: ignore\n",
+      "  File \"c:\\Users\\abdul\\Desktop\\ML\\projects\\SelfDriving\\.venv\\Lib\\site-packages\\comtypes\\_post_coinit\\unknwn.py\", line 416, in Release\n",
+      "    return self.__com_Release()  # type: ignore\n",
+      "OSError: exception: access violation writing 0x00005B0000000000\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "%pip install dxcam\n"
+    "import dxcam\n",
+    "import os\n",
+    "import time\n",
+    "import datetime\n",
+    "import keyboard\n",
+    "from PIL import Image\n",
+    "from pyaccsharedmemory import accSharedMemory\n",
+    "\n",
+    "# Output settings\n",
+    "OUTPUT_DIR = \"ac_screenshots\"\n",
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+    "SCREEN_REGION = (0, 0, 1920, 1080)\n",
+    "\n",
+    "class ScreenshotCapture:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize screenshot capture and telemetry reader\"\"\"\n",
+    "        self.camera = dxcam.create()\n",
+    "        if self.camera is None:\n",
+    "            raise RuntimeError(\"Failed to create DXCam camera\")\n",
+    "        \n",
+    "        # Initialize Assetto Corsa shared memory\n",
+    "        self.asm = accSharedMemory()\n",
+    "        print(\"DXCam and AC telemetry initialized successfully\")\n",
+    "\n",
+    "    def read_telemetry_data(self):\n",
+    "        \"\"\"Read telemetry data from Assetto Corsa shared memory\"\"\"\n",
+    "        try:\n",
+    "            sm = self.asm.read_shared_memory()\n",
+    "            \n",
+    "            if sm is not None:\n",
+    "                return {\n",
+    "                    'speed': sm.Physics.speed_kmh,\n",
+    "                    'steering': sm.Physics.steer_angle,\n",
+    "                    'throttle': sm.Physics.gas,\n",
+    "                    'brake': sm.Physics.brake,\n",
+    "                    # 'rpm': sm.Physics.rpm,\n",
+    "                    # 'gear': sm.Physics.gear,\n",
+    "                    # 'fuel': getattr(sm.Physics, 'fuel', 0.0),\n",
+    "                    # 'lap_time': getattr(sm.Graphics, 'current_time', 0),\n",
+    "                    # 'position': getattr(sm.Graphics, 'position', 0)\n",
+    "                }\n",
+    "            return None\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading telemetry: {e}\")\n",
+    "            return None\n",
+    "\n",
+    "    def capture_screenshot(self):\n",
+    "        \"\"\"Capture screenshot with telemetry data\"\"\"\n",
+    "        telemetry = self.read_telemetry_data()\n",
+    "        timestamp = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S_%f\")[:-3]\n",
+    "        \n",
+    "        # Handle telemetry data\n",
+    "        if telemetry:\n",
+    "            speed = telemetry['speed']\n",
+    "            brake = telemetry['brake']\n",
+    "            steering = telemetry['steering']\n",
+    "            throttle = telemetry['throttle']\n",
+    "            # gear = telemetry['gear']\n",
+    "            # rpm = telemetry['rpm']\n",
+    "            \n",
+    "            filename = (f\"{OUTPUT_DIR}/ac_{timestamp}_\"\n",
+    "                       f\"speed_{speed:.1f}_brake_{brake:.2f}_\"\n",
+    "                       f\"steer_{steering:.3f}_throttle_{throttle:.2f}.png\")\n",
+    "        else:\n",
+    "            # Fallback when no telemetry available\n",
+    "            filename = f\"{OUTPUT_DIR}/ac_{timestamp}_no_telemetry.png\"\n",
+    "        \n",
+    "        # Capture screenshot\n",
+    "        frame = self.camera.grab(region=SCREEN_REGION)\n",
+    "        if frame is not None:\n",
+    "            img = Image.fromarray(frame)\n",
+    "            img.save(filename)\n",
+    "            print(f\"Saved {filename}\")\n",
+    "            \n",
+    "            # Display telemetry info\n",
+    "            if telemetry:\n",
+    "                print(f\"  Speed: {telemetry['speed']:.1f} km/h\")\n",
+    "                print(f\"  Steering: {telemetry['steering']:.3f}\")\n",
+    "                print(f\"  Throttle: {telemetry['throttle']:.2f}\")\n",
+    "                print(f\"  Brake: {telemetry['brake']:.2f}\")\n",
+    "                print(f\"  Gear: {telemetry['gear']}, RPM: {int(telemetry['rpm'])}\")\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(\"Failed to capture frame\")\n",
+    "            return False\n",
+    "\n",
+    "    def cleanup(self):\n",
+    "        \"\"\"Cleanup resources\"\"\"\n",
+    "        if hasattr(self, 'asm'):\n",
+    "            self.asm.close()\n",
+    "        if self.camera:\n",
+    "            del self.camera\n",
+    "\n",
+    "def main():\n",
+    "    print(\"Screenshot capture ready. Press 'c' to capture, 'q' to quit.\")\n",
+    "    print(\"Make sure Assetto Corsa is running and in a session!\")\n",
+    "    \n",
+    "    try:\n",
+    "        capture = ScreenshotCapture()\n",
+    "        \n",
+    "        # Test telemetry connection\n",
+    "        telemetry = capture.read_telemetry_data()\n",
+    "        if telemetry is None:\n",
+    "            print(\"WARNING: Cannot connect to Assetto Corsa telemetry!\")\n",
+    "            print(\"Make sure Assetto Corsa is running and you're in a session.\")\n",
+    "            print(\"Screenshots will still work but without telemetry data.\")\n",
+    "        else:\n",
+    "            print(f\"✓ Connected to AC telemetry. Current speed: {telemetry['speed']:.1f} km/h\")\n",
+    "        \n",
+    "        while True:\n",
+    "            try:\n",
+    "                if keyboard.is_pressed('c'):\n",
+    "                    capture.capture_screenshot()\n",
+    "                    time.sleep(0.2)  # Prevent multiple captures\n",
+    "                    \n",
+    "                elif keyboard.is_pressed('q'):\n",
+    "                    print(\"Exiting...\")\n",
+    "                    break\n",
+    "                    \n",
+    "                time.sleep(0.01)  # Small delay to reduce CPU usage\n",
+    "                \n",
+    "            except KeyboardInterrupt:\n",
+    "                print(\"\\nExiting...\")\n",
+    "                break\n",
+    "                \n",
+    "    except RuntimeError as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error: {e}\")\n",
+    "        return\n",
+    "    finally:\n",
+    "        if 'capture' in locals():\n",
+    "            capture.cleanup()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
